--- a/.gitattributes
+++ b/.gitattributes
@@ -23,6 +23,7 @@
 *.tag           text eol=lf
 *.tagx          text eol=lf
 *.xml           text eol=lf
+*.pom           text eol=lf
 
 # These files are binary and should be left untouched
 # (binary is a macro for -text -diff)
