--- a/.gitattributes
+++ b/.gitattributes
@@ -6,24 +6,23 @@
 # The above will handle all files NOT found below
 #
 # These files are text and should be normalized (Convert crlf => lf)
-*.css           text eol=lf
-*.df            text eol=lf
-*.htm           text eol=lf
-*.html          text eol=lf
-*.java          text eol=lf
-*.js            text eol=lf
-*.json          text eol=lf
-*.jsp           text eol=lf
-*.jspf          text eol=lf
-*.jspx          text eol=lf
-*.properties    text eol=lf
-*.sh            text eol=lf
-*.tld           text eol=lf
-*.txt           text eol=lf
-*.tag           text eol=lf
-*.tagx          text eol=lf
-*.xml           text eol=lf
-*.pom           text eol=lf
+*.css           text eol=crlf
+*.df            text eol=crlf
+*.htm           text eol=crlf
+*.html          text eol=crlf
+*.java          text eol=crlf
+*.js            text eol=crlf
+*.json          text eol=crlf
+*.jsp           text eol=crlf
+*.jspf          text eol=crlf
+*.jspx          text eol=crlf
+*.properties    text eol=crlf
+*.sh            text eol=crlf
+*.tld           text eol=crlf
+*.txt           text eol=crlf
+*.tag           text eol=crlf
+*.tagx          text eol=crlf
+*.xml           text eol=crlf
 
 # These files are binary and should be left untouched
 # (binary is a macro for -text -diff)
